--- a/routes/index.html
+++ b/routes/index.html
@@ -130,17 +130,18 @@
         () => {
           const evtSource = new EventSource("/data", { withCredentials: false });
           const chart = renderChart();
+          const status = document.getElementById('status');
+          const setStatusContent = (msg) => status.innerHTML = msg
 
           evtSource.addEventListener("ping", function (event) {
             const data = JSON.parse(event.data);
             chart.update(data);
+            setStatusContent("")
           });
 
           evtSource.addEventListener('error', function (err){
             console.error("EventSource failed:", err);
-            document.getElementById('status').innerHTML = `
-            <p>The data stream has encountered an error. <a href="/">Reload the page</a> if issues persist.</p>
-            `
+            setStatusContent(`<p>The data stream has encountered an error. <a href="/">Reload the page</a> if issues persist.</p>`)
           })
         },
         { once: true }
