--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 nodeGroup.insert("text")
                   .attr("dx", 8)
                   .attr("dy", ".35em")
-                  .text((d) => d.id);
+                  .text(({name, id}) => name || id);
                 return nodeGroup;
               });
 
