--- a/index-v3.html
+++ b/index-v3.html
@@ -139,8 +139,8 @@
       </div>
       <svg id="chart"></svg>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.2.0/d3.min.js"></script>
     <script type="module">
-      import * as d3 from "https://cdn.skypack.dev/d3@7?min";
       import { createApp } from 'https://cdn.skypack.dev/petite-vue@0.2.2?min'
       
       const renderChart = () => {
