--- a/packages/server/index.html
+++ b/packages/server/index.html
@@ -137,7 +137,7 @@
         <button id="zoom-in" aria-label="Zoom in" @click="zoomIn"></button>
         <button id="zoom-out" aria-label="Zoom out" @click="zoomOut"></button>
       </div>
-      <svg id="chart"></svg>
+      <svg id="chart" width="100vw" height="100vh"></svg>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.2.0/d3.min.js"></script>
     <script type="module">
